# actronneoapi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  example.py  mypy.ini  pyproject.toml  readme.md  realtime_example.py  requirements.txt  setup.py
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: ci.yml  publish.yml
actronneoapi/: actron.py
docs/: home_assistant_integration.md  rt_push_implementation.md
src/actron_neo_api/: __init__.py  _version.py  actron.py  const.py  exceptions.py  oauth.py  state.py
src/actron_neo_api/models/: __init__.py  auth.py  schemas.py  settings.py  status.py  system.py  zone.py
src/actron_neo_api/rt/: __init__.py  base.py  mqtt_client.py  signalr_client.py
tests/: conftest.py  test_actron.py  test_actron_api.py  test_coalescer.py  test_coverage.py  test_full_coverage.py  test_models.py  test_models_simple.py  test_mqtt_client.py  test_oauth.py  test_oauth2.py  test_realtime_package.py  test_schemas.py  test_settings.py  test_signalr_client.py  test_state.py  test_status.py  test_system.py  test_zone.py
