[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "actron-neo-api"
dynamic = ["version"]
authors = [
  { name="Kurt Chrisford", email="soft.year7030@fastmail.com" },
]
description = "Python API wrapper for the Actron Air API, supporting Neo and Que systems."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/kclif9/actronneoapi"
Issues = "https://github.com/kclif9/actronneoapi/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/actron_neo_api"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "-v --strict-markers"
